    - Add/Modify/Drop Sequence
    - Add/Drop Index
    - Add/Drop Foreign Key
    - Add/Drop Unique Constraint
    - Add Lookup Table
    - Add Auto Increment
    - Merge Column
    - Merge Table

 - Refactoring, scripting for Intersystems Cache DB:
   Made Refactoring and scripting functions available for the Intersystems Cache DB by activating its 
   Hibernate dialect.

Bug-Fixes:

Fixed several bugs which made it impossible to work with SQLite.

Updated Italian translation (Ivo Neri)

Fixed a bug which made it difficult to see text that was being edited in a table.

1968807: Unsigned INT problem with IMPORT FILE functionality

1968270: Displaying unsigned INT as signed INT in column

1845987: PostgreSQL interval types are not displayed

1840266: Create Table Script sets varchar columns to 8000

1830649: Focus Loss

1824534: Constraint created twice

1902611: (Oracle) Don't fail on SQL-Plus "SET ..." commands in SQL script; Now, the Oracle plugin skips over 
                  them. 

1876352: (DB2) Incorrect  TIMESTAMP in create data script (loss of precision - nanosecond component - also 
               affected other databases.

1861402: (Informix catalog switching doesn't work correctly) 
 - Better catalog switching behavior for databases that support catalogs.  Now if a connection is made 
   without specifying the catalog, a place-holder
   catalog ("None") is inserted into the catalog drop-down menu and removed once a catalog is selected.  
 - Fixed a race condition that caused the tree to be refreshed before data was refreshed from the database 
   when the catalog was switched.  
 - For Informix, setCatalog seems to have no effect, so now an explicit DATABASE <catalogname> command is 
   issued. 

1848924: Sybase object browser contents not displayed

1769599: fix for permission problem with Windows Vista.  Now we create our temporary path file in a temporary 